# vinted-bot

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py  vinted-bot.command
dashboard/: app.py
dashboard/templates/: index.html  item.html
pipeline/: classify.py  images.py  ocr.py  prompt_builder.py
prompts/: system.txt
scraper/: filters.py  html_scrape.py  normalize.py  session.py  vinted_api.py
scripts/: build_css.sh  debug_api.py  discover_filters.py
src/vinted_bot/: cli.py  config.py  scrape.py
src/vinted_bot/dashboard/: app.py
src/vinted_bot/dashboard/static/: basecoat.css  input.css  output.css
src/vinted_bot/dashboard/templates/: _item_action.html  _search_content.html  _status_pill.html  base.html  index.html  item.html  new_search.html  search_detail.html  searches.html  settings.html
src/vinted_bot/pipeline/: classify.py  images.py  ocr.py  prompt_builder.py
src/vinted_bot/prompts/: default_ja.txt  default_nein.txt  default_sonderregeln.txt  default_vielleicht.txt  system.txt
src/vinted_bot/scraper/: html_scrape.py  session.py  vinted_api.py
src/vinted_bot/storage/: db.py  schema.sql
storage/: db.py  schema.sql
